--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <script>
   var osmcz = osmcz || {};
   var map;
-
+  var sidebar;
   var guideposts;
 
   var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -121,19 +121,21 @@
 
   control = L.control.layers(base_layers, overlays).addTo(map);
 
-  guideposts = new osmcz.guideposts(map, base_layers, overlays, control, "xxx");
 
- // create the sidebar instance and add it to the map
-  var sidebar = L.control.sidebar({ container: 'sidebar' })
+  // create the sidebar instance and add it to the map
+  osmcz.sidebar = sidebar = L.control.sidebar({ container: 'sidebar' })
     .addTo(map)
     .open('home');
-// add panels dynamically to the sidebar
+
+  guideposts = new osmcz.guideposts(map, base_layers, overlays, control, "xxx");
+
+  // add panels dynamically to the sidebar
   sidebar
     .addPanel({
-    id:   'js-api',
+    id:   'guidepost',
     tab:  '<i class="fas fa-heart"></i>',
-    title: 'we <i class="fas fa-heart"></i> you',
-    pane: '<p><button>lol</button></b>',
+    title: 'hi',
+    pane: '<div id="sidebar-content"></div><p>after</p>',
     })
     .addPanel({
     id:   'mail',
