more move, cancel move

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.0.1/MarkerCluster.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.0.1/MarkerCluster.Default.css">
   <link rel="stylesheet" href="css/leaflet-sidebar.css">
-
   <link rel="stylesheet" href="css/style.css" type="text/css">
-
 </head>
 <body>
 
@@ -78,7 +76,7 @@
 
     <div class="leaflet-sidebar-pane" id="settings">
     <h1 class="leaflet-sidebar-header">Settings<span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span></h1>
-    <p>settings</p>
+    <button class='wbutton'>settings</button>
     </div>
 
 
