--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="ico/favicon.ico">
 
-  <xlink rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.0.1/MarkerCluster.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.0.1/MarkerCluster.Default.css">
   <link rel="stylesheet" href="css/leaflet-sidebar.css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
+
+<div class="container">
 
   <div id="sidebar" class="leaflet-sidebar collapsed">
 
@@ -83,7 +85,7 @@
   </div>
   </div>
 
-<div id="map" style="width: 100%; height: 500px;"></div>
+<div id="map"></div>
 
 <script>
   var osmcz = osmcz || {};
@@ -155,10 +157,7 @@
   });
 </script>
 
-
-
-
-
+ <div class="bottomleft">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- social -->
 <ins class="adsbygoogle"
@@ -169,5 +168,11 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+</div>
+
+
+
+
+</div>
   </body>
 </html>
